Fixed dark mode active tab color issues

--- a/src/NotepadNext/stylesheets/npp-dark.css
+++ b/src/NotepadNext/stylesheets/npp-dark.css
@@ -5,9 +5,9 @@
 
 ----------------------------------------------------------------------------*/
 ads--CDockWidgetTab[activeTab="true"] {
-    background: qlineargradient(spread : pad, x1 : 0, y1 : 0, x2 : 0, y2 : 0.5, stop : 0
-                palette(window), stop:1 palette(light));
-    /*background: palette(highlight);*/
+    /*background: qlineargradient(spread : pad, x1 : 0, y1 : 0, x2 : 0, y2 : 0.5, stop : 0
+                palette(window), stop:1 palette(light));*/
+    background: palette(highlight);
     color: palette(foreground);
 }
 
@@ -16,12 +16,13 @@ ads--CDockWidgetTab QLabel {
 }
 
 ads--CDockWidgetTab[activeTab="true"] QLabel {
-    color: palette(dark);
+    color: palette(foreground);
+    background: palette(highlight);
 }
 
 ads--CDockWidgetTab {
     /* Make tab icons smaller */
-    qproperty-iconSize: 8px 8px;
+    /*qproperty-iconSize: 8px 8px;*/
 }
 
 #dockWidgetTabLabel {
@@ -33,7 +34,6 @@ ads--CDockWidgetTab {
 #tabCloseButton {
     margin:  0px;
     padding: 0x;
-    qproperty-iconSize: 8px 8px;
 }
 
 /* changed for NotepadNext - 'Close without save' button */
